# hello-mqtt

./: __main__.py  consume_task.py  docker-compose.yml  pyproject.toml  readme.md
consumer/: Dockerfile  pyproject.toml
consumer/consumer/: __init__.py  __main__.py  consume.py
producer/: Dockerfile  pyproject.toml
producer/producer/: __main__.py  produce.py
